--- a/style.css
+++ b/style.css
@@ -89,12 +89,33 @@
   }
   
   .main1 {
-      flex: 1 1 0;
-      padding: 3%;
+      flex: 1 0 0;
+      margin: 1%;
       text-align: center;
+      border: 1px solid gray;
+      position: relative;
+      border-radius: 15px;
+      overflow: hidden;
   }
   
-  /* Contact */
+  .main1:hover {
+    top: -5px;
+    box-shadow: 10px 15px 30px 10px rgba(116, 116, 114, 0.5);
+  }
+
+.main1 h2 {
+    background: rgb(236, 161, 174);
+    padding: 7px;
+    margin: 0px;
+}
+ 
+
+.main1 p {
+    padding: 20px 7px;
+    margin: 3px;
+}
+
+/* Contact */
   
   .contact-items {
       display: flex;
@@ -184,5 +205,9 @@
   
       .main-content {
           flex-direction: column;
+      }
+      .main1 {
+      overflow: visible;
+      border-radius: 0px;
       }
   }
